chore(deps): Updating versions

--- a/UI/MauiEmbedding/MauiCommunityToolkitApp/MauiCommunityToolkitApp/Presentation/MainPage.xaml
+++ b/UI/MauiEmbedding/MauiCommunityToolkitApp/MauiCommunityToolkitApp/Presentation/MainPage.xaml
@@ -8,9 +8,10 @@
     xmlns:uen="using:Uno.Extensions.Navigation.UI"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     NavigationCacheMode="Required"
+	xmlns:utu="using:Uno.Toolkit.UI"
     mc:Ignorable="d">
 
-    <Grid>
+    <Grid utu:SafeArea.Insets="All">
         <NavigationView uen:Region.Attached="True">
             <NavigationView.MenuItems>
                 <NavigationViewItem uen:Region.Name="Avatar" Content="Avatar" />
