--- a/UI/MauiEmbedding/TelerikApp/TelerikApp/Presentation/MainPage.xaml
+++ b/UI/MauiEmbedding/TelerikApp/TelerikApp/Presentation/MainPage.xaml
@@ -6,10 +6,11 @@
 	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	  mc:Ignorable="d"
 	  xmlns:uen="using:Uno.Extensions.Navigation.UI"
+	  xmlns:utu="using:Uno.Toolkit.UI"
 	  NavigationCacheMode="Required"
 	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-	<Grid>
+	<Grid utu:SafeArea.Insets="All">
 		<NavigationView uen:Region.Attached="True">
 			<NavigationView.MenuItems>
 				<NavigationViewItem Content="Accordion"
