--- a/UI/MauiEmbedding/GrialKitApp/GrialKitApp/Presentation/MainPage.xaml
+++ b/UI/MauiEmbedding/GrialKitApp/GrialKitApp/Presentation/MainPage.xaml
@@ -5,11 +5,12 @@
 	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	  mc:Ignorable="d"
+	  xmlns:utu="using:Uno.Toolkit.UI"
 	  xmlns:uen="using:Uno.Extensions.Navigation.UI"
 	  NavigationCacheMode="Required"
 	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-	<Grid>
+	<Grid utu:SafeArea.Insets="All">
 		<NavigationView uen:Region.Attached="True">
 			<NavigationView.MenuItems>
 				<NavigationViewItem Content="Area Chart"
