--- a/UI/UnoZIndex/UnoZIndex/UnoZIndex/UnoZIndex/Presentation/MainPage.xaml
+++ b/UI/UnoZIndex/UnoZIndex/UnoZIndex/UnoZIndex/Presentation/MainPage.xaml
@@ -30,7 +30,7 @@
 			<RowDefinition />
 		</Grid.RowDefinitions>
 		<Grid>
-			<TextBlock Text="Tap on invidual cards to bring to the front" />
+			<TextBlock Text="Tap on individual cards to bring to the front" />
 		</Grid>
 
 		<Canvas x:Name="MainCanvas" Grid.Row="1">
