chore: Adjust maui sample

--- a/UI/MauiEmbedding/TelerikApp/TelerikApp/Presentation/MainPage.xaml
+++ b/UI/MauiEmbedding/TelerikApp/TelerikApp/Presentation/MainPage.xaml
@@ -5,6 +5,7 @@
 	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	  mc:Ignorable="d"
+	  xmlns:controls="using:TelerikApp.MauiControls"
 	  xmlns:uen="using:Uno.Extensions.Navigation.UI"
 	  xmlns:utu="using:Uno.Toolkit.UI"
 	  NavigationCacheMode="Required"
@@ -36,43 +37,35 @@
 			</NavigationView.MenuItems>
 			<Grid uen:Region.Attached="True"
 				  uen:Region.Navigator="Visibility">
-				<embed:MauiHost xmlns:controls="using:TelerikApp.MauiControls"
-								xmlns:embed="using:Uno.Extensions.Maui"
+				<embed:MauiHost xmlns:embed="using:Uno.Extensions.Maui"
 								uen:Region.Name="Accordion"
 								Source="controls:AccordionSample"
 								Visibility="Collapsed" />
-				<embed:MauiHost xmlns:controls="using:TelerikApp.MauiControls"
-								xmlns:embed="using:Uno.Extensions.Maui"
+				<embed:MauiHost xmlns:embed="using:Uno.Extensions.Maui"
 								uen:Region.Name="BadgeView"
 								Source="controls:BadgeSample"
 								Visibility="Collapsed" />
-				<embed:MauiHost xmlns:controls="using:TelerikApp.MauiControls"
-								xmlns:embed="using:Uno.Extensions.Maui"
+				<embed:MauiHost xmlns:embed="using:Uno.Extensions.Maui"
 								uen:Region.Name="Calendar"
 								Source="controls:CalendarSample"
 								Visibility="Collapsed" />
-				<embed:MauiHost xmlns:controls="using:TelerikApp.MauiControls"
-								xmlns:embed="using:Uno.Extensions.Maui"
+				<embed:MauiHost xmlns:embed="using:Uno.Extensions.Maui"
 								uen:Region.Name="DataGrid"
 								Source="controls:DataGridSample"
 								Visibility="Collapsed" />
-				<embed:MauiHost xmlns:controls="using:TelerikApp.MauiControls"
-								xmlns:embed="using:Uno.Extensions.Maui"
+				<embed:MauiHost xmlns:embed="using:Uno.Extensions.Maui"
 								uen:Region.Name="AreaChart"
 								Source="controls:AreaChartSample"
 								Visibility="Collapsed" />
-				<embed:MauiHost xmlns:controls="using:TelerikApp.MauiControls"
-								xmlns:embed="using:Uno.Extensions.Maui"
+				<embed:MauiHost xmlns:embed="using:Uno.Extensions.Maui"
 								uen:Region.Name="FinancialChart"
 								Source="controls:FinancialChartSample"
 								Visibility="Collapsed" />
-				<embed:MauiHost xmlns:controls="using:TelerikApp.MauiControls"
-								xmlns:embed="using:Uno.Extensions.Maui"
+				<embed:MauiHost xmlns:embed="using:Uno.Extensions.Maui"
 								uen:Region.Name="Gauge"
 								Source="controls:GaugeSample"
 								Visibility="Collapsed" />
-				<embed:MauiHost xmlns:controls="using:TelerikApp.MauiControls"
-								xmlns:embed="using:Uno.Extensions.Maui"
+				<embed:MauiHost xmlns:embed="using:Uno.Extensions.Maui"
 								uen:Region.Name="PdfViewer"
 								Source="controls:PdfViewSample"
 								Visibility="Collapsed" />
