chore: adjust maui

--- a/UI/MauiEmbedding/SyncfusionApp/SyncfusionApp/Presentation/MainPage.xaml
+++ b/UI/MauiEmbedding/SyncfusionApp/SyncfusionApp/Presentation/MainPage.xaml
@@ -61,7 +61,7 @@
 				  uen:Region.Navigator="Visibility">
 				<embed:MauiHost uen:Region.Name="DoughnutCenterElevation"
 								xmlns:embed="using:Uno.Extensions.Maui"
-								Source="controls:CenterElevation"
+								Source="circularChart:CenterElevation"
 								Visibility="Collapsed" />
 				<!--<embed:MauiHost uen:Region.Name="DoughnutDoughnutChart"
 								xmlns:embed="using:Uno.Extensions.Maui"
