--- a/reference/SimpleCalc/MVVM-Xaml/SimpleCalculator/MainPage.xaml
+++ b/reference/SimpleCalc/MVVM-Xaml/SimpleCalculator/MainPage.xaml
@@ -1,22 +1,22 @@
 ﻿<Page x:Class="SimpleCalculator.MainPage"
 	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	  xmlns:local="using:SimpleCalculator"
-	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	  mc:Ignorable="d"
-	  xmlns:utu="using:Uno.Toolkit.UI"
-	  xmlns:um="using:Uno.Material"
 	  xmlns:calc="using:SimpleCalculator.Business"
-	  Background="{ThemeResource BackgroundBrush}">
+	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	  xmlns:local="using:SimpleCalculator"
+	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	  xmlns:um="using:Uno.Material"
+	  xmlns:utu="using:Uno.Toolkit.UI"
+	  Background="{ThemeResource BackgroundBrush}"
+	  mc:Ignorable="d">
 
 	<Page.Resources>
 		<x:String x:Key="MoonIcon">F1 M 3 0 C 1.9500000476837158 0 0.949999988079071 0.1600000262260437 0 0.46000003814697266 C 4.059999942779541 1.7300000190734863 7 5.519999980926514 7 10 C 7 14.480000019073486 4.059999942779541 18.27000093460083 0 19.540000915527344 C 0.949999988079071 19.840000927448273 1.9500000476837158 20 3 20 C 8.519999980926514 20 13 15.519999980926514 13 10 C 13 4.480000019073486 8.519999980926514 0 3 0 Z</x:String>
 		<x:String x:Key="SunIcon">F1 M 5.760000228881836 4.289999961853027 L 3.9600000381469727 2.5 L 2.549999952316284 3.9100000858306885 L 4.340000152587891 5.699999809265137 L 5.760000228881836 4.289999961853027 Z M 3 9.949999809265137 L 0 9.949999809265137 L 0 11.949999809265137 L 3 11.949999809265137 L 3 9.949999809265137 Z M 12 0 L 10 0 L 10 2.950000047683716 L 12 2.950000047683716 L 12 0 L 12 0 Z M 19.450000762939453 3.9100000858306885 L 18.040000915527344 2.5 L 16.25 4.289999961853027 L 17.65999984741211 5.699999809265137 L 19.450000762939453 3.9100000858306885 Z M 16.239999771118164 17.610000610351562 L 18.030000686645508 19.40999984741211 L 19.440000534057617 18 L 17.639999389648438 16.21000099182129 L 16.239999771118164 17.610000610351562 Z M 19 9.949999809265137 L 19 11.949999809265137 L 22 11.949999809265137 L 22 9.949999809265137 L 19 9.949999809265137 Z M 11 4.949999809265137 C 7.690000057220459 4.949999809265137 5 7.639999866485596 5 10.949999809265137 C 5 14.259999752044678 7.690000057220459 16.950000762939453 11 16.950000762939453 C 14.309999942779541 16.950000762939453 17 14.259999752044678 17 10.949999809265137 C 17 7.639999866485596 14.309999942779541 4.949999809265137 11 4.949999809265137 Z M 10 21.900001525878906 L 12 21.900001525878906 L 12 18.950000762939453 L 10 18.950000762939453 L 10 21.900001525878906 Z M 2.549999952316284 17.990001678466797 L 3.9600000381469727 19.400001525878906 L 5.75 17.600000381469727 L 4.340000152587891 16.190000534057617 L 2.549999952316284 17.990001678466797 Z</x:String>
 
 		<Style x:Key="KeypadButton"
-			   TargetType="Button"
-			   BasedOn="{StaticResource ElevatedButtonStyle}">
+			   BasedOn="{StaticResource ElevatedButtonStyle}"
+			   TargetType="Button">
 			<Setter Property="FontSize" Value="32" />
 			<Setter Property="Height" Value="72" />
 			<Setter Property="HorizontalAlignment" Value="Stretch" />
@@ -25,8 +25,8 @@
 		</Style>
 
 		<Style x:Key="KeypadPrimaryButton"
-			   TargetType="Button"
-			   BasedOn="{StaticResource FilledButtonStyle}">
+			   BasedOn="{StaticResource FilledButtonStyle}"
+			   TargetType="Button">
 			<Setter Property="FontSize" Value="32" />
 			<Setter Property="Height" Value="72" />
 			<Setter Property="HorizontalAlignment" Value="Stretch" />
@@ -34,8 +34,8 @@
 		</Style>
 
 		<Style x:Key="KeypadSecondaryButton"
-			   TargetType="Button"
-			   BasedOn="{StaticResource FilledTonalButtonStyle}">
+			   BasedOn="{StaticResource FilledTonalButtonStyle}"
+			   TargetType="Button">
 			<Setter Property="Background" Value="{ThemeResource OnSurfaceInverseBrush}" />
 			<Setter Property="FontSize" Value="32" />
 			<Setter Property="Height" Value="72" />
@@ -55,15 +55,15 @@
 				<RowDefinition Height="Auto" />
 			</Grid.RowDefinitions>
 
-			<!-- Header -->
+			<!--  Header  -->
 			<ToggleButton Grid.Row="0"
-						  Background="{ThemeResource SurfaceBrush}"
 						  Margin="8,24,8,0"
 						  HorizontalAlignment="Center"
-						  Style="{StaticResource IconToggleButtonStyle}"
-						  IsChecked="{Binding IsDark, Mode=TwoWay}"
+						  VerticalAlignment="Top"
+						  Background="{ThemeResource SurfaceBrush}"
 						  CornerRadius="20"
-						  VerticalAlignment="Top">
+						  IsChecked="{Binding IsDark, Mode=TwoWay}"
+						  Style="{StaticResource IconToggleButtonStyle}">
 				<ToggleButton.Content>
 					<PathIcon Data="{StaticResource SunIcon}"
 							  Foreground="{ThemeResource PrimaryBrush}" />
@@ -74,27 +74,27 @@
 				</um:ControlExtensions.AlternateContent>
 			</ToggleButton>
 
-			<!-- Output -->
+			<!--  Output  -->
 			<StackPanel Grid.Row="2"
-						Spacing="16"
 						Padding="16,8"
-						HorizontalAlignment="Stretch">
-				<TextBlock Text="{Binding Calculator.Equation}"
-						   HorizontalAlignment="Right"
+						HorizontalAlignment="Stretch"
+						Spacing="16">
+				<TextBlock HorizontalAlignment="Right"
 						   Foreground="{ThemeResource OnSecondaryContainerBrush}"
-						   Style="{StaticResource DisplaySmall}" />
-				<TextBlock Text="{Binding Calculator.Output}"
-						   HorizontalAlignment="Right"
+						   Style="{StaticResource DisplaySmall}"
+						   Text="{Binding Calculator.Equation}" />
+				<TextBlock HorizontalAlignment="Right"
 						   Foreground="{ThemeResource OnBackgroundBrush}"
-						   Style="{StaticResource DisplayLarge}" />
+						   Style="{StaticResource DisplayLarge}"
+						   Text="{Binding Calculator.Output}" />
 			</StackPanel>
 
-			<!-- Keypad -->
+			<!--  Keypad  -->
 			<Grid Grid.Row="3"
-				  RowSpacing="16"
-				  ColumnSpacing="16"
+				  MaxHeight="500"
 				  Padding="16"
-				  MaxHeight="500">
+				  ColumnSpacing="16"
+				  RowSpacing="16">
 				<Grid.RowDefinitions>
 					<RowDefinition Height="*" />
 					<RowDefinition Height="*" />
@@ -109,7 +109,7 @@
 					<ColumnDefinition Width="*" />
 				</Grid.ColumnDefinitions>
 
-				<!-- Row 0 -->
+				<!--  Row 0  -->
 				<Button Grid.Row="0"
 						Grid.Column="0"
 						Command="{Binding InputCommand}"
@@ -135,7 +135,7 @@
 						Content="÷"
 						Style="{StaticResource KeypadPrimaryButton}" />
 
-				<!-- Row 1 -->
+				<!--  Row 1  -->
 				<Button Grid.Row="1"
 						Grid.Column="0"
 						Command="{Binding InputCommand}"
@@ -161,7 +161,7 @@
 						Content="×"
 						Style="{StaticResource KeypadPrimaryButton}" />
 
-				<!-- Row 2 -->
+				<!--  Row 2  -->
 				<Button Grid.Row="2"
 						Grid.Column="0"
 						Command="{Binding InputCommand}"
@@ -187,7 +187,7 @@
 						Content="−"
 						Style="{StaticResource KeypadPrimaryButton}" />
 
-				<!-- Row 3 -->
+				<!--  Row 3  -->
 				<Button Grid.Row="3"
 						Grid.Column="0"
 						Command="{Binding InputCommand}"
@@ -213,7 +213,7 @@
 						Content="+"
 						Style="{StaticResource KeypadPrimaryButton}" />
 
-				<!-- Row 4 -->
+				<!--  Row 4  -->
 				<Button Grid.Row="4"
 						Grid.Column="0"
 						Command="{Binding InputCommand}"
@@ -232,8 +232,8 @@
 						CommandParameter="back"
 						Style="{StaticResource KeypadButton}">
 					<Button.Content>
-						<FontIcon Glyph="&#xE926;"
-								  FontSize="36" />
+						<FontIcon FontSize="36"
+								  Glyph="&#xE926;" />
 					</Button.Content>
 				</Button>
 				<Button Grid.Row="4"
