--- a/UI/MauiEmbedding/TelerikApp/TelerikApp.MauiControls/AccordionSample.xaml
+++ b/UI/MauiEmbedding/TelerikApp/TelerikApp.MauiControls/AccordionSample.xaml
@@ -3,14 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:telerik="http://schemas.telerik.com/2022/xaml/maui"
              x:Class="TelerikApp.MauiControls.AccordionSample">
-  <ContentView.Resources>
-    <Style TargetType="Label">
-      <Setter Property="Margin" Value="15, 5" />
-    </Style>
-  </ContentView.Resources>
-	<Label Text="Accordion Sample (Search for TODO and apply comments)" />
+	<ContentView.Resources>
+		<Style TargetType="Label">
+			<Setter Property="Margin"
+					Value="15, 5" />
+		</Style>
+	</ContentView.Resources>
 	<!-- TODO: Uncomment -->
-	<!--<telerik:RadAccordion>
+	<telerik:RadAccordion>
     <telerik:AccordionItem IsExpanded="True" HeaderText="Citizens Financial Group">
       <telerik:AccordionItem.Content>
         <ScrollView>
@@ -58,5 +58,5 @@
         </ScrollView>
       </telerik:AccordionItem.Content>
     </telerik:AccordionItem>
-  </telerik:RadAccordion>-->
+  </telerik:RadAccordion>
 </ContentView>
