--- a/UI/MauiEmbedding/TelerikApp/TelerikApp.MauiControls/BadgeSample.xaml
+++ b/UI/MauiEmbedding/TelerikApp/TelerikApp.MauiControls/BadgeSample.xaml
@@ -41,16 +41,15 @@
 						Value="Micro" />
 			</Style>
 			<!-- TODO: Uncomment -->
-			<!--<Style x:Key="DefaultBadgeViewStyle" TargetType="telerik:RadBadgeView">
+			<Style x:Key="DefaultBadgeViewStyle" TargetType="telerik:RadBadgeView">
                 <Setter Property="HorizontalOptions" Value="Center" />
                 <Setter Property="BadgeVerticalAlignment" Value="Start" />
-            </Style>-->
+            </Style>
 		</ResourceDictionary>
 	</ContentView.Resources>
 	<Grid RowDefinitions="*, Auto">
-		<Label Text="Badge Sample (Search for TODO and apply comments)" />
 		<!-- TODO: Uncomment -->
-		<!--  <telerik:RadItemsControl Grid.Row="0"
+		  <telerik:RadItemsControl Grid.Row="0"
                                  ItemsSource="{Binding Users}">
       <telerik:RadItemsControl.ItemTemplate>
         <DataTemplate>
@@ -150,6 +149,6 @@
           </StackLayout>
         </telerik:RadBadgeView.Content>
       </telerik:RadBadgeView>
-    </Grid>-->
+    </Grid>
 	</Grid>
 </ContentView>
