--- a/UI/MauiEmbedding/TelerikApp/TelerikApp.MauiControls/FinancialChartSample.xaml
+++ b/UI/MauiEmbedding/TelerikApp/TelerikApp.MauiControls/FinancialChartSample.xaml
@@ -3,10 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:telerik="http://schemas.telerik.com/2022/xaml/maui"
              x:Class="TelerikApp.MauiControls.FinancialChartSample">
-  <Grid x:Name="RootGrid">
-		<Label Text="Financial Chart Sample (Search for TODO and apply comments)" />
-		<!-- TODO: Uncomment -->
-		<!--<Grid.RowDefinitions>
+	<Grid x:Name="RootGrid">
+		<Grid.RowDefinitions>
       <RowDefinition Height="50"/>
       <RowDefinition Height="*"/>
       <RowDefinition Height="50"/>
@@ -98,6 +96,6 @@
       </telerik:RadCartesianChart.VerticalAxis>
       <telerik:RadCartesianChart.Series>
       </telerik:RadCartesianChart.Series>
-    </telerik:RadCartesianChart>-->
+    </telerik:RadCartesianChart>
   </Grid>
 </ContentView>
