--- a/UI/MauiEmbedding/TelerikApp/TelerikApp.MauiControls/Styles/ColorsAndStyles.xaml
+++ b/UI/MauiEmbedding/TelerikApp/TelerikApp.MauiControls/Styles/ColorsAndStyles.xaml
@@ -40,8 +40,8 @@
 	<Color x:Key="SeparatorOnAccentColor">#36FFFFFF</Color>
 
 	<!-- TODO: Uncomment -->
-	<!--<telerik:InvertedBooleanConverter x:Key="InvertedBooleanConverter" />
-  <telerik:NullOrEmptyToBoolConverter x:Key="NullOrEmptyToBoolConverter" />-->
+	<telerik:InvertedBooleanConverter x:Key="InvertedBooleanConverter" />
+  <telerik:NullOrEmptyToBoolConverter x:Key="NullOrEmptyToBoolConverter" />
 
 	<!--Status tags for controls and examples-->
 	<Style x:Key="StatusTagLabelStyle"
@@ -60,7 +60,7 @@
 	<DataTemplate x:Key="NormalStatusTemplate" />
 	
 	<!-- TODO: Uncomment -->
-	<!--<DataTemplate x:Key="NewStatusTemplate">
+	<DataTemplate x:Key="NewStatusTemplate">
 		<telerik:RadBorder BackgroundColor="#FD5064"
 						   WidthRequest="32"
 						   HeightRequest="15">
@@ -88,7 +88,7 @@
 											 NormalTemplate="{StaticResource NormalStatusTemplate}"
 											 NewTemplate="{StaticResource NewStatusTemplate}"
 											 UpdatedTemplate="{StaticResource UpdatedStatusTemplate}"
-											 BetaTemplate="{StaticResource BetaStatusTemplate}" />-->
+											 BetaTemplate="{StaticResource BetaStatusTemplate}" />
 
 	<Style x:Key="BaseLabelStyle"
 		   TargetType="Label">
