--- a/UI/MauiEmbedding/TelerikApp/TelerikApp.MauiControls/PdfViewSample.xaml
+++ b/UI/MauiEmbedding/TelerikApp/TelerikApp.MauiControls/PdfViewSample.xaml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:telerik="http://schemas.telerik.com/2022/xaml/maui"
-             x:Class="TelerikApp.MauiControls.PdfViewSample">
+<ContentView x:Class="TelerikApp.MauiControls.PdfViewSample"
+			 xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+			 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+			 xmlns:telerik="http://schemas.telerik.com/2022/xaml/maui">
 	<Grid RowDefinitions="Auto,*">
-		<Label Text="Pdf Viewer Sample (Search for TODO and apply comments)" />
-		<!-- TODO: Uncomment -->
-		<!--<telerik:RadPdfViewerToolbar PdfViewer="{x:Reference pdfViewer }" x:Name="pdfViewerToolbar" >
-      <telerik:PdfViewerFitToWidthToolbarItem />
-      <telerik:PdfViewerZoomInToolbarItem />
-      <telerik:PdfViewerZoomOutToolbarItem />
-      <telerik:PdfViewerNavigateToPreviousPageToolbarItem />
-      <telerik:PdfViewerNavigateToNextPageToolbarItem />
-    </telerik:RadPdfViewerToolbar>
-    <telerik:RadPdfViewer x:Name="pdfViewer" Grid.Row="1" />-->
-  </Grid>
+		<!--  TODO: Uncomment  -->
+		<telerik:RadPdfViewerToolbar x:Name="pdfViewerToolbar"
+									 PdfViewer="{x:Reference pdfViewer}">
+			<telerik:PdfViewerFitToWidthToolbarItem />
+			<telerik:PdfViewerZoomInToolbarItem />
+			<telerik:PdfViewerZoomOutToolbarItem />
+			<telerik:PdfViewerNavigateToPreviousPageToolbarItem />
+			<telerik:PdfViewerNavigateToNextPageToolbarItem />
+		</telerik:RadPdfViewerToolbar>
+		<telerik:RadPdfViewer x:Name="pdfViewer"
+							  Grid.Row="1" />
+	</Grid>
 </ContentView>
