--- a/UI/MauiEmbedding/SyncfusionApp/SyncfusionApp.MauiControls/EmbeddedControl.xaml
+++ b/UI/MauiEmbedding/SyncfusionApp/SyncfusionApp.MauiControls/EmbeddedControl.xaml
@@ -1,39 +1,41 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-			 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-			 xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-			 x:Class="SyncfusionApp.MauiControls.EmbeddedControl"
-			 HorizontalOptions="Fill"
-			 VerticalOptions="Fill">
-	<VerticalStackLayout
-		Spacing="25"
-		Padding="30,0"
-		VerticalOptions="Center">
+<ContentView
+    x:Class="SyncfusionApp.MauiControls.EmbeddedControl"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:local="SyncfusionApp.MauiControls.Samples.CircularChart.SfCircularChart"
+    xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+    HorizontalOptions="Fill"
+    VerticalOptions="Fill">
+    <VerticalStackLayout
+        Padding="30,0"
+        Spacing="25"
+        VerticalOptions="Center">
 
-		<Image
-			Source="SyncfusionApp/Assets/Images/dotnet_bot.png"
-			SemanticProperties.Description="Cute dot net bot waving hi to you!"
-			HeightRequest="200"
-			HorizontalOptions="Center" />
+        <Image
+            HeightRequest="200"
+            HorizontalOptions="Center"
+            SemanticProperties.Description="Cute dot net bot waving hi to you!"
+            Source="SyncfusionApp/Assets/Images/dotnet_bot.png" />
 
-		<Label
-			Text="Hello, World!"
-			SemanticProperties.HeadingLevel="Level1"
-			FontSize="32"
-			HorizontalOptions="Center" />
+        <Label
+            FontSize="32"
+            HorizontalOptions="Center"
+            SemanticProperties.HeadingLevel="Level1"
+            Text="Hello, World!" />
 
-		<Label
-			Text="Welcome to .NET Multi-platform App UI"
-			SemanticProperties.HeadingLevel="Level2"
-			SemanticProperties.Description="Welcome to dot net Multi platform App U I"
-			FontSize="18"
-			HorizontalOptions="Center" />
+        <Label
+            FontSize="18"
+            HorizontalOptions="Center"
+            SemanticProperties.Description="Welcome to dot net Multi platform App U I"
+            SemanticProperties.HeadingLevel="Level2"
+            Text="Welcome to .NET Multi-platform App UI" />
 
-		<Button
-			Text="{Binding CounterText}"
-			SemanticProperties.Hint="Counts the number of times you click"
-			Command="{Binding Counter}"
-			HorizontalOptions="Center" />
+        <Button
+            Command="{Binding Counter}"
+            HorizontalOptions="Center"
+            SemanticProperties.Hint="Counts the number of times you click"
+            Text="{Binding CounterText}" />
 
-	</VerticalStackLayout>
+    </VerticalStackLayout>
 </ContentView>
