chore: Refactoring maui code

--- a/reference/TubePlayer/TubePlayer.MauiControls/ChartControl.xaml
+++ b/reference/TubePlayer/TubePlayer.MauiControls/ChartControl.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <base:SampleView
-    x:Class="TubePlayer.MauiControls.EmbeddedControl"
+    x:Class="TubePlayer.MauiControls.ChartControl"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:base="using:SyncfusionApp.MauiControls.Samples.Base"
