--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Skia.WPF/App.xaml
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Skia.WPF/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="SkiaSharpTest.WPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SkiaSharpTest.WPF"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:SkiaSharpTest.WPF">
     <Application.Resources>
          
     </Application.Resources>
