chore: Update to latest template

--- a/reference/Commerce/Commerce/Views/ProductDetailsPage.xaml
+++ b/reference/Commerce/Commerce/Views/ProductDetailsPage.xaml
@@ -8,7 +8,7 @@
 	  xmlns:utu="using:Uno.Toolkit.UI"
 	  xmlns:uen="using:Uno.Extensions.Navigation.UI"
 	  xmlns:uer="using:Uno.Extensions.Reactive.UI"
-	  xmlns:ut="using:Uno.Themes"
+	  xmlns:um="using:Uno.Material"
 	  xmlns:views="using:Commerce.Views"
 	  mc:Ignorable="d"
 	  Background="{ThemeResource BackgroundBrush}">
