--- a/reference/Commerce/Commerce/Views/ProductsPage.xaml
+++ b/reference/Commerce/Commerce/Views/ProductsPage.xaml
@@ -4,6 +4,7 @@
 	  xmlns:uer="using:Uno.Extensions.Reactive.UI"
 	  xmlns:utu="using:Uno.Toolkit.UI"
 	  xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
+	  xmlns:um="using:Uno.Material"
 	  xmlns:ut="using:Uno.Themes"
 	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
